# data-science-basic

./: main.py  pyproject.toml
Matplotlib/: 01-Matplotlib Concepts Lecture.ipynb
Numpy/: 01-Numpy Array.ipynb  02-Numpy Indexing and Selection.ipynb  03-Numpy Operations.ipynb  numpy_array.ipynb
Pandas/: 01-Introduction to Pandas.ipynb  02-Series.ipynb  03-DataFrames.ipynb  04-Missing Data.ipynb  05-Groupby.ipynb  06-Merging, Joining, and Concatenating.ipynb  07-Operations.ipynb  08-Data Input and Output.ipynb
Seaborn/: 01-Distribution Plots.ipynb  02-Categorical Plots.ipynb  03-Matrix Plots.ipynb  04-Grids.ipynb  05-Regression Plots.ipynb  06-Style and Color.ipynb
